--- a/assets/global.scss
+++ b/assets/global.scss
@@ -82,6 +82,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
+  font-family: sans-serif;
   vertical-align: baseline;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
